--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,28 +1,26 @@
-* {
-    color: rgb(235, 0, 223);
+*{
+    font-size: 30px;
 }
 
 .container {
-
+    border: 1px solid rgb(100, 98, 98);
+    width: 50%;
+    margin: 0 auto;
+    padding: 1em
 }
 
 
 .post {
-    border: 1px solid rgb(100, 98, 98);
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px;
+
 }
 .post h1 {
     
-    color: black;
     font-weight: bold;
     text-align: center;
     font-size: 40px;
 }
 
 .post p {
-    color: black;
     text-align: center;
     font-size: 30px;
 }
