Finalizada la cabecera con diseño azul

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,12 +6,11 @@
     border: 1px solid rgb(100, 98, 98);
     width: 50%;
     margin: 0 auto;
-    padding: 1em
 }
 
 
 .post {
-
+    padding: 1em;
 }
 .post h1 {
     
@@ -23,4 +22,15 @@
 .post p {
     text-align: center;
     font-size: 30px;
+}
+
+.cabecera {
+    color: white;
+    background-color: rgb(59, 33, 172);
+    padding: 10px;
+}
+
+span {
+    font-size:25px;
+    margin-left: 20px;
 }
